--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -7,6 +7,13 @@
   color: rgb(0, 0, 0);
 }
 
+#menuContent{
+  display: none;
+  color: #212121;
+  position: absolute;
+  left: 80%;
+  top: 5%;
+}
 
 .btn11 {
     position: absolute;
