Styled personal logo and burger menu to proper parts of DOM

--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -1,10 +1,16 @@
 #header{
     display: flex;
     color: #137dda;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .headerItem{
   color: rgb(0, 0, 0);
+}
+
+#burgerMenu{
+    position: relative;
 }
 
 #menuContent{
