--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -5,8 +5,22 @@
     justify-content: space-between;
 }
 
+#dropdown{
+  list-style: none; 
+}
+
 .headerItem{
   color: rgb(0, 0, 0);
+  font-weight: 600;
+  line-height: 2;
+  font-family: 'Gill Sans', 'GillSansCRegular', Arial, sans-serif;
+  font-size: 15px;
+  letter-spacing: 0.1em;
+}
+
+.hLink{
+  color: inherit;
+  text-decoration: none;
 }
 
 #burgerMenu{
