--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -1,8 +1,16 @@
+
+
+
 #header{
     display: flex;
-    color: #137dda;
     align-items: center;
     justify-content: space-between;
+}
+
+#logoText{
+  /* color: #5aaef8; */
+  color: #6246ea;
+  font-size: 30px;
 }
 
 #dropdown{
