Added pictures and added main picture to landing page with purple highlight styling

--- a/portfolio_website_km/src/App.css
+++ b/portfolio_website_km/src/App.css
@@ -19,6 +19,7 @@
   /* Light Mode Purple  */
   /* Background #fffffe */
   /* Paragraph #94a1b2 */
+  /* Paragraph #2b2c34 */
   /* Headline #2b2c34 */
   /* Button text #fffffe */
   /* Button #6246ea */
