--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -57,3 +57,60 @@
     color: #2b2c34;
     max-width: 500px;
 }
+
+#mouseContainer{
+    display: flex;
+}
+
+.icon-scroll {
+    width: 33px;
+    height: 55px;
+    /* background: #ccc; */
+    /* background: #6246ea; */
+    background: #a7a7fa;
+    /* border: 2px solid #bbb; */
+    /* border: 2px solid black; */
+    border: 2px solid #6246ea;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    position: relative;
+    margin-top: 120px;
+    /* When not full page size remove the margin right below to center */
+    margin-right: 1000px;
+    box-shadow: 3px 3px 5px -5px #000;
+}
+
+.icon-scroll::before {
+    content: "";
+    width: 4px;
+    height: 10px;
+    background: #eee;
+    border-radius: 2px;
+    margin-top: 5px;
+  }
+
+.icon-scroll::after {
+    content: "";
+    width: 4px;
+    height: 3px;
+    /* background-color: #bbb; */
+    /* background-color: #2a2a2a; */
+    background-color: #6246ea;
+    position: absolute;
+    display: block;
+    animation: scroll ease 1s infinite;
+  }
+
+@keyframes scroll {
+    from {
+      top: 5px;
+    }
+    to {
+      top: 18px;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
