--- a/portfolio_website_km/src/burgerMenu.css
+++ b/portfolio_website_km/src/burgerMenu.css
@@ -1,11 +1,14 @@
 
 .btn11 {
     /* position: absolute; */
+    position: relative;
+    z-index: 2;
     width: 60px;
     height: 60px;
+    /* background-color: #7a61f0d9; */
     /* top: 300px;
     left: 240px; */
-    transition-duration: 0.5s;
+    /* transition-duration: 0.5s; */
   }
   .btn11 .icon-left {
     transition-duration: 0.5s;
