--- a/portfolio_website_km/src/burgerMenu.css
+++ b/portfolio_website_km/src/burgerMenu.css
@@ -9,6 +9,7 @@
     /* top: 300px;
     left: 240px; */
     /* transition-duration: 0.5s; */
+    /* background-color: #a7a7fa; */
   }
   .btn11 .icon-left {
     transition-duration: 0.5s;
