--- a/portfolio_website_km/src/burgerMenu.css
+++ b/portfolio_website_km/src/burgerMenu.css
@@ -17,7 +17,8 @@
     height: 4px;
     width: 15px;
     top: 30px;
-    background-color: #212121;
+    /* background-color: #212121; */
+    background-color: #ffffff00;
   }
   .btn11 .icon-left:before {
     transition-duration: 0.5s;
