--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -78,27 +78,33 @@
 
   border-style: solid;
   border-top: white;
-
+  /* overflow-x: hidden;
+  max-width: 100%; */
   /* left: 86.5%; */
-  left: 100%;
+  /* left: 100%; */
   padding: 46px;
   padding-top: 70px;
   padding-bottom: 22px;
+  border-right: white;
   animation: '';
 }
 
 @keyframes slideLeft {
   100% { 
-    left: 86.5%; 
+    /* left: 86.5%;  */
+    left: "";
+    right: 0;
   }
 }
 
 @keyframes slideRight {
   0%{
-    left: 86.5%;
+    /* left: 86.5%; */
+    right: 0;
   }
   100%{
     left: 100%;
+    right: "";
   }
 }
 
