Added dark mode background to main page and swithc background with JS and useRef() selectors

--- a/portfolio_website_km/src/nightDay.css
+++ b/portfolio_website_km/src/nightDay.css
@@ -6,6 +6,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-right: 10px;
+  margin-top: 3px;
 }
 .content > i{
   font-size: 44px;
