Added white background to burger menu when clicked. Becuase bruger menu uses :before and :after psuedo classes, calling the class couldn't change color so instead I added another CSS class with the white backgorund with the improtant property and removed if when clicked again

--- a/portfolio_website_km/src/burgerMenu.css
+++ b/portfolio_website_km/src/burgerMenu.css
@@ -100,4 +100,14 @@
   .btn11:hover {
     cursor: pointer;
   }
+
+
+  .specialB:before{
+    background-color: white !important;
+  }
+
+  .specialA:after{
+    background-color: white !important;
+  }
+
   
