--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -1,7 +1,9 @@
 #welcomeAll{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    /* Require custom margins
+    justify-content: space-between; */
 }
 
 
@@ -11,10 +13,15 @@
     flex-direction: column;
     margin-left: 150px;
     margin-top: 145px; */
-    margin-left: 298px;
+    margin-top: 145px;
     display: flex;
     flex-direction: column;
-    margin-top: 145px;
+
+    margin-left: 50px;
+
+    /* for custom whitespace
+    margin-left: 298px; */
+    
 }
 
 #profilePic{
@@ -26,7 +33,6 @@
     border-style: solid; */
     display: block;
     width: 500px;
-    margin-right: 371px;
     margin-top: 163px;
     border-style: solid;
     border-color: black;
@@ -36,6 +42,11 @@
     -moz-box-shadow: 9px 10px 3px 0px rgba(98,70,234,0.76);
     transform: translateX(0px);
     animation: 1s ease-out 0s 1 loadFromBtm;
+
+    margin-left: 50px;
+
+    /* for custom white space
+    margin-right: 371px; */
     /* animation-delay: 1s; */
 }
 
@@ -88,9 +99,12 @@
     margin: auto;
     position: relative;
     margin-top: 120px;
-    /* When not full page size remove the margin right below to center */
-    margin-right: 1000px;
     box-shadow: 3px 3px 5px -5px #000;
+    /* When not full page size remove the margin right below to center */
+
+    /* For custom white space
+    margin-right: 1000px; */
+    
 }
 
 .icon-scroll::before {
