--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -1,10 +1,15 @@
 
-
+/* Add position fixed and add the styling again */
 
 #header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: -webkit-sticky;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 1;
 }
 
 #logoText{
