Added new margin styling for height as scroll snap changed that styling

--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -13,7 +13,9 @@
     flex-direction: column;
     margin-left: 150px;
     margin-top: 145px; */
-    margin-top: 145px;
+
+    /* margin-top: 145px; */
+    margin-top: 230px;
     display: flex;
     flex-direction: column;
 
@@ -89,7 +91,9 @@
     border-style: solid; */
     display: block;
     width: 500px;
-    margin-top: 163px;
+
+    /* margin-top: 163px; */
+    margin-top: 205px;
     border-style: solid;
     border-color: black;
     border-radius: 10px;
