Added styling to properly position navigation menu on-load

--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -91,6 +91,7 @@
   display: none; 
   color: #212121;
   position: absolute;
+  right: -285px;
   /* background-color: #6246ead9; */
   background-color: #a7a7fa;
   border-bottom-left-radius: 6px;
