--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -3,18 +3,101 @@
 }
 
 #titleContainer{
-    padding-top: 100px;
+    padding-top: 70px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 60px;
+    font-size: 30px;
+    padding-bottom: 20px;
+}
+
+#workContainer{
+    display: flex;
+    font-size: 10px;
+    justify-content: space-around;
+    /* gap: 0px; */
+    margin-top: 30px;
+    padding-bottom: 20px;
+}
+
+.job{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 400px;
+    /* background-color: #6246ea; */
+    background-color: #775fe9;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.job {
+    /* background-color: #6246ea; */
+    background-color: #ffffff;
+    text-align: center;
+    text-align: center;
+    border-style: solid;
+    border-color: #6246ea;
+    -webkit-box-shadow: 9px 10px 3px 0px rgb(98 70 234 / 76%);
+}
+
+.jobDesc{
+    /* background-color: #6246ea; */
+    text-align: center;
+}
+
+#job1{
+    /* padding-left: 20px;
+    padding-right: 20px; */
+}
+
+#job2{
+    /* padding-left: 20px;
+    padding-right: 20px; */
+}
+
+#job3{
+    /* padding-left: 21px;
+    padding-right: 21px; */
+}
+
+.jobh1{
+    /* background-color: #775fe9; */
+    text-align: center;
+}
+
+.jobh2{
+    /* background-color: #775fe9; */
+    text-align: center;
+    margin-top: -7px;
+}
+
+#kiwi_WebsitePic{
+    margin-top: 19px;
+    width: 341px;
+    height: 210px;
+    border-radius: 10px;
+}
+
+#modsvr_Pic{
+    margin-top: 19px;
+    width: 341px;
+    height: 210px;
+    border-radius: 10px;
+}
+
+#ufit_Pic{
+    margin-top: 19px;
+    width: 341px;
+    height: 210px;
+    border-radius: 10px;
 }
 
 #awardsContainer{
     display: flex;
     justify-content: space-around;
-    margin-top: 500px;
+    margin-top: 50px;
 }
 
 .award{
