--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -21,30 +21,47 @@
     padding-bottom: 20px;
 }
 
-.job{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 400px;
-    /* background-color: #6246ea; */
-    background-color: #775fe9;
-    padding: 10px;
-    border-radius: 10px;
-}
-
 .job {
     /* background-color: #6246ea; */
+    display: flex;
+    flex-direction: column;
     background-color: #ffffff;
-    text-align: center;
+    max-width: 400px;
     text-align: center;
     border-style: solid;
+    align-items: center;
     border-color: #6246ea;
+    padding: 10px;
+    border-radius: 10px;
     -webkit-box-shadow: 9px 10px 3px 0px rgb(98 70 234 / 76%);
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: ease-in-out 0.3s;
+    height: 340px;
 }
 
 .jobDesc{
     /* background-color: #6246ea; */
     text-align: center;
+    transition: ease-in-out 0.3s;
+    font-size: 12px;
+}
+
+#jobDesc1{
+    /* display: none; */
+    opacity: 0;
+    pointer-events: none;
+}
+
+#jobDesc2{
+    opacity: 0;
+    pointer-events: none;
+}
+
+#jobDesc3{
+    opacity: 0;
+    pointer-events: none;
 }
 
 #job1{
@@ -78,6 +95,14 @@
     width: 341px;
     height: 210px;
     border-radius: 10px;
+    transition: ease-in-out 0.3s;
+    min-height: 210px;
+}
+
+#kiwi_WebsitePic:hover {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
 }
 
 #modsvr_Pic{
@@ -85,6 +110,14 @@
     width: 341px;
     height: 210px;
     border-radius: 10px;
+    transition: ease-in-out 0.3s;
+    min-height: 210px;
+}
+
+#modsvr_Pic:hover {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
 }
 
 #ufit_Pic{
@@ -92,6 +125,14 @@
     width: 341px;
     height: 210px;
     border-radius: 10px;
+    transition: ease-in-out 0.3s;
+    min-height: 210px;
+}
+
+#ufit_Pic:hover {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
 }
 
 #awardsContainer{
