--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -3,7 +3,8 @@
 }
 
 #titleContainer{
-    padding-top: 70px;
+    /* padding-top: 70px; */
+    padding-top: 45px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -26,7 +27,8 @@
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    max-width: 400px;
+    /* max-width: 400px; */
+    max-width: 300px;
     text-align: center;
     border-style: solid;
     align-items: center;
@@ -92,11 +94,14 @@
 
 #kiwi_WebsitePic{
     margin-top: 19px;
-    width: 341px;
+    /* width: 341px; */
+    
     height: 210px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    min-height: 210px;
+    /* min-height: 210px; */
+    width: 270px;
+    min-height: 177px;
 }
 
 #kiwi_WebsitePic:hover {
@@ -107,11 +112,13 @@
 
 #modsvr_Pic{
     margin-top: 19px;
-    width: 341px;
+    /* width: 341px; */
     height: 210px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    min-height: 210px;
+    /* min-height: 210px; */
+    width: 270px;
+    min-height: 177px;
 }
 
 #modsvr_Pic:hover {
@@ -122,11 +129,13 @@
 
 #ufit_Pic{
     margin-top: 19px;
-    width: 341px;
+    /* width: 341px; */
     height: 210px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    min-height: 210px;
+    /* min-height: 210px; */
+    width: 270px;
+    min-height: 177px;
 }
 
 #ufit_Pic:hover {
@@ -138,7 +147,7 @@
 #awardsContainer{
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
+    margin-top: 25px;
 }
 
 .award{
@@ -158,4 +167,5 @@
 
 .awardText2{
     font-weight: 400;
+    margin-top: -13px;
 }
