--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 245px;
+    /* padding-top: 245px; */
+    padding-top: 160px;
 }
 
 #skillsText{
