--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -4,9 +4,10 @@
 
 #titleContainer{
     /* padding-top: 70px; */
-    padding-top: 45px;
+    /* padding-top: 45px; */
+    padding-top: 25px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 30px;
@@ -18,7 +19,8 @@
     font-size: 10px;
     justify-content: space-around;
     /* gap: 0px; */
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    margin-top: -7px;
     padding-bottom: 20px;
 }
 
@@ -150,6 +152,12 @@
     margin-top: 25px;
 }
 
+#achieveSubtitle{
+    font-size: 40px;
+    /* margin-top: -10px; */
+    margin-top: -40px;
+}
+
 .award{
     display: flex;
     flex-direction: column;
@@ -157,8 +165,8 @@
 }
 
 .awardImg{
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
 }
 
 .awardText1{
