--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -37,7 +37,7 @@
     border-color: #6246ea;
     padding: 10px;
     border-radius: 10px;
-    -webkit-box-shadow: 9px 10px 3px 0px rgb(98 70 234 / 76%);
+    box-shadow: 9px 10px 3px 0px rgb(98 70 234 / 76%);
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
