Added a project component and added base structure of projects page

--- a/portfolio_website_km/src/projects.css
+++ b/portfolio_website_km/src/projects.css
@@ -12,6 +12,17 @@
 
 }
 
+#projectContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+.projectSubBox{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 #projectSubTitle{
     font-size: 40px;
     margin-top: -40px;
