Added Contat Page Styling for light mode

--- a/portfolio_website_km/src/App.css
+++ b/portfolio_website_km/src/App.css
@@ -1,7 +1,9 @@
 *{
   box-sizing: border-box;
   /* background-color: aliceblue; */
-  background-color: #fffffe;
+
+  /* background-color: #fffffe; */
+
   /* background-color: #e8f9fd; */
  /* background-color: #76c1d4; */
  /* Barely Gray Edge: #f7f7f7 */
