--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -174,6 +174,96 @@
     left: 80%;
     animation: move 3s infinite;
   }
+
+  
+  #sendBtnDark{
+    background: #6246ea;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    text-transform: uppercase;
+    border: none;
+    letter-spacing: 0.1rem;
+    font-size: 1rem;
+    padding: 1rem 3rem;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+
+
+  #sendBtnDark:hover{
+    /* letter-spacing: 0.2rem;
+  padding: 1.1rem 3.1rem;
+  background: var(--clr); */
+  /* color: var(--clr); */
+  /* box-shadow: 0 0 35px var(--clr); */
+  /* animation: box 3s infinite; */
+
+  /* letter-spacing: 0.2rem;
+  padding: 1.1rem 3.1rem;
+  background: white;
+  border-radius: 3px;
+  color: black; */
+  /* box-shadow: 0 0 35px var(--clr); */
+  /* animation: box 3s infinite; */
+
+  /* border-color: #6246ea;
+  border-style: dashed;
+  border-width: 2px; */
+
+  letter-spacing: 0.2rem;
+  padding: 1.1rem 3.1rem;
+  background: white;
+  border-radius: 3px;
+  color: black;
+  box-shadow: #6246ea 9px 10px 1px 0px;
+}
+
+#sendBtnDark::before{
+    content: "";
+  inset: 2px;
+  background: #272822;
+}
+
+#sendBtnDark i {
+    inset: 0;
+    display: block;
+  }
+  
+#sendBtnDark i::before {
+    content: "";
+    width: 10px;
+    height: 2px;
+    left: 80%;
+    top: -2px;
+    border: 2px solid var(--clr);
+    background: #272822;
+    transition: 0.2s;
+  }
+  
+  #sendBtnDark:hover i::before {
+    width: 15px;
+    left: 20%;
+    animation: move 3s infinite;
+  }
+  
+  #sendBtnDark i::after {
+    content: "";
+    width: 10px;
+    height: 2px;
+    left: 20%;
+    bottom: -2px;
+    border: 2px solid var(--clr);
+    background: #272822;
+    transition: 0.2s;
+  }
+  
+  #sendBtnDark:hover i::after {
+    width: 15px;
+    left: 80%;
+    animation: move 3s infinite;
+  }
+  
   
   @keyframes move {
     0% {
@@ -275,4 +365,13 @@
     margin-top: 5px;
     user-select: none;
 }
+
+/* .whiteUnderline:focus-visible{
+    border-bottom-color: white;
+}
+
+.blackUnderline:focus-visible{
+    border-bottom-color: #000000;
+} */
+
 
