Added resume with one page and new images as well as hover styles for those in achieve page

--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -96,54 +96,87 @@
 
 #kiwi_WebsitePic{
     margin-top: 19px;
-    /* width: 341px; */
-    
-    height: 210px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    /* min-height: 210px; */
-    width: 270px;
+
+    height: 177px;
     min-height: 177px;
+    width: 266px;
+    border-style: ridge;
+    border-color: black;
+    border-width: 3px;
+
+    background-color: #6146ea00;
 }
 
 #kiwi_WebsitePic:hover {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    /* box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; */
     transition: ease-in-out 0.2s;
     cursor: pointer;
+
+    box-shadow: rgba(98, 70, 234, 0.76) 5px 6px 7px 0px;
 }
 
 #modsvr_Pic{
-    margin-top: 19px;
-    /* width: 341px; */
-    height: 210px;
+    /* margin-top: 19px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    /* min-height: 210px; */
-    width: 270px;
     min-height: 177px;
+
+    width: 200px;
+    height: 200px;
+    background-color: #6146ea00; */
+
+    margin-top: 19px;
+    border-radius: 10px;
+    transition: ease-in-out 0.3s;
+
+    height: 177px;
+    min-height: 177px;
+    width: 266px;
+    border-style: ridge;
+    border-color: black;
+    border-width: 3px;
+
+    background-color: #6146ea00;
 }
 
 #modsvr_Pic:hover {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    /* box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; */
     transition: ease-in-out 0.2s;
     cursor: pointer;
+    box-shadow: rgba(98, 70, 234, 0.76) 5px 6px 7px 0px;
 }
 
 #ufit_Pic{
-    margin-top: 19px;
-    /* width: 341px; */
-    height: 210px;
+    /* margin-top: 19px;
+    min-height: 177px;
     border-radius: 10px;
     transition: ease-in-out 0.3s;
-    /* min-height: 210px; */
-    width: 270px;
+    width: 200px;
+    height: 150px;
+
+    background-color: #6146ea00; */
+
+    margin-top: 19px;
+    border-radius: 10px;
+    transition: ease-in-out 0.3s;
+
+    height: 177px;
     min-height: 177px;
+    width: 266px;
+    border-style: ridge;
+    border-color: black;
+    border-width: 3px;
+
+    background-color: #6146ea00;
 }
 
 #ufit_Pic:hover {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    /* box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; */
     transition: ease-in-out 0.2s;
     cursor: pointer;
+    box-shadow: rgba(98, 70, 234, 0.76) 5px 6px 7px 0px;
 }
 
 #awardsContainer{
