Added nvaigation bar functionality and home logo functionality

--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -47,6 +47,10 @@
   background-color: rgb(167, 167, 250);
 }
 
+#logoHREF{
+  text-decoration: none;
+}
+
 .headerItem{
   color: rgb(0, 0, 0);
   font-weight: 600;
