--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -92,6 +92,7 @@
     /* background-color: #775fe9; */
     text-align: center;
     margin-top: -7px;
+    font-weight: 1000;
 }
 
 #kiwi_WebsitePic{
