--- a/portfolio_website_km/src/projects.css
+++ b/portfolio_website_km/src/projects.css
@@ -27,3 +27,14 @@
     font-size: 40px;
     margin-top: -40px;
 }
+
+#projectInfoBox{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-color: aqua;
+    width: 50%;
+    height: 50vh;
+    transition: ease-in-out 0.4s;
+}
