--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -1,4 +1,27 @@
 #projectInfoImg{
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 340px;
+}
+
+#projectInfoContainer{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: grey;
+}
+
+#closeBtnContainer{
+    position: absolute;
+    left: 80%;
+    top: 4%;
+
+}
+
+#closePic{
+    width: 25px;
+    height: 25px;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    
 }
