--- a/portfolio_website_km/src/projects.css
+++ b/portfolio_website_km/src/projects.css
@@ -29,12 +29,23 @@
 }
 
 #projectInfoBox{
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
     transform: translateX(-100%);
-    background-color: aqua;
+    background-color: bisque;
     width: 50%;
     height: 50vh;
+    transition: ease-in-out 0.4s; */
+
+    position: fixed;
+    top: 25%;
+    /* left: 0%; */
+    display: flex;
+    transform: translateX(-100%);
+    /* background-color: black; */
+    width: 100%;
+    height: 65vh;
     transition: ease-in-out 0.4s;
+    justify-content: center;
 }
